<resources>
    <string name="app_name">MidApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password !</string>
    <string name="create_a_new_accout">Create a New Accout ?</string>
    <string name="judul" />
    <string name="panjang" />
    <string name="lebar" />
    <string name="tinggi" />
    <string name="hitung" />
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="email_id">Email ID</string>
    <string name="register">Register</string>
    <string name="contacts">Contacts</string>
    <string name="favorite">favorite</string>
    <string name="search">search</string>
    <string name="more">more</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="area">Area</string>
    <string name="alamat">Alamat</string>
    <string name="addres">Addres</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
</resources>