<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#A2BAD3"
    android:padding="50dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogo"
        android:src="@drawable/kotlin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:drawableStart="@drawable/ic_username"
        android:hint="@string/username"
        android:id="@+id/etUsername"
        android:textSize="20dp"
        android:textStyle="bold"
        android:onClick="clickUsername"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:drawableStart="@drawable/ic_password"
        android:drawableEnd="@drawable/ic_show"
        android:id="@+id/etPassword"
        android:onClick="clickPassword"
        android:hint="@string/password"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnLogin"
        android:onClick="clickLogin"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvForgetPassword"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:onClick="cickForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:text="@string/create_a_new_accout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>