<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#5997D5"
    android:padding="40dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_gravity="center"
        android:src="@drawable/kotlin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_username"
        android:hint="@string/username"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:drawableEnd="@drawable/ic_show"
            android:hint="@string/password"
            />

    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvForgetPassword"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:onClick="cickForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:text="@string/create_a_new_accout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>