<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:orientation="vertical"
    android:background="#DBE6F1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogo"
        android:src="@drawable/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/met1"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/met2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/met1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/ic_mail"
            android:hint="@string/email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/met3"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/met2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableEnd="@drawable/ic_show"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/met4"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/met3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableEnd="@drawable/ic_show"
            android:drawableStart="@drawable/ic_baseline_lock_open_24"
            android:hint="@string/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/met5"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/met4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/enter_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:layout_below="@id/met5"
        android:layout_centerInParent="true"
        android:id="@+id/rgGender"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:text="Male"
            android:id="@+id/Male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:text="Female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <Button
        android:text="@string/register"
        android:layout_below="@id/rgGender"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"/>


</RelativeLayout>