<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        app:navigationIcon="@drawable/ic_dehaze"
        android:background="@color/purple_200"
        app:menu="@menu/top_app"
        app:title="Contacts"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/name"
                    app:hintTextColor="@color/purple_200"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:imeOptions="actionNext"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:src="@drawable/ic_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"/>
                
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="345dp"
                    android:hint="@string/phone"
                    android:layout_weight="0.55"
                    app:hintTextColor="@color/purple_200"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="345dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/area"
                    android:layout_weight="0.55"
                    app:hintTextColor="@color/purple_200">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:imeOptions="actionNext"
                        android:textColor="@color/black"
                        android:inputType="number"
                        android:textCursorDrawable="@null"
                        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_location_on_24"
                    android:layout_marginEnd="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addres"
                    app:hintTextColor="@color/purple_200">
                    
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:textCursorDrawable="@null"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>    

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    app:hintTextColor="@color/purple_200"
                    android:layout_marginStart="33dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:textCursorDrawable="@null"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:baselineAligned="false">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="345dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.55"
                        android:hint="@string/state"
                        app:hintTextColor="@color/purple_200"
                        android:layout_marginStart="33dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@null"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="345dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.55"
                        android:hint="@string/zip"
                        app:hintTextColor="@color/purple_200">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@null"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_baseline_email_24"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:hintTextColor="@color/purple_200">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:textCursorDrawable="@null"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"/>


                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_baseline_cake_24"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthday"
                    app:hintTextColor="@color/purple_200">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="date"
                        android:imeOptions="actionNext"
                        android:textCursorDrawable="@null"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"/>


                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</LinearLayout>